--- a/Informe_de_laboratorio_3_final (2).ipynb
+++ b/Informe_de_laboratorio_3_final (2).ipynb
@@ -755,27 +755,82 @@
         "\n",
         "Estas correcciones dependen del valor específico de las medidas y forman parte esencial del protocolo de teletransportación.\n",
         "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Representación matemática de las correcciones\n",
+        "\n",
+        "### 1. Si \\( c_0 = 1 \\):\n",
+        "\n",
+        "Se aplica la compuerta CNOT entre los qubits `qw[0]` y `qw[1]`, lo cual se expresa como:\n",
+        "\n",
+        "$$\n",
+        "|\\phi_1\\rangle = \\text{CNOT}_{qw[0] \\rightarrow qw[1]} |\\phi\\rangle\n",
+        "$$\n",
+        "\n",
+        "Este paso corrige la inversión causada en el proceso de entrelazamiento inicial.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 2. Si \\( c_1 = 1 \\):\n",
+        "\n",
+        "Se aplican dos correcciones:\n",
+        "\n",
+        "- Una compuerta \\( CZ \\) entre `qw[0]` y `qw[1]`:\n",
+        "\n",
+        "$$\n",
+        "|\\phi_2\\rangle = CZ_{qw[0], qw[1]} |\\phi_1\\rangle\n",
+        "$$\n",
+        "\n",
+        "- Una compuerta \\( CRZ(\\pi) \\) entre `qa[0]` y `qw[1]`:\n",
+        "\n",
+        "$$\n",
+        "|\\phi_3\\rangle = CRZ(\\pi)_{qa[0], qw[1]} |\\phi_2\\rangle\n",
+        "$$\n",
+        "\n",
+        "Estas correcciones se encargan de ajustar la fase relativa que depende del colapso del qubit `qw[2]`.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 3. Si \\( c_1 = 0 \\):\n",
+        "\n",
+        "En este caso se aplica:\n",
+        "\n",
+        "$$\n",
+        "|\\phi_2'\\rangle = CZ_{qa[0], qw[1]} |\\phi_1\\rangle\n",
+        "$$\n",
+        "\n",
+        "Corrige la fase relativa bajo el supuesto de que `qw[2]` fue medido en estado \\( |0\\rangle \\).\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 4. Si \\( c_0 = 0 \\), \\( c_2 = 0 \\), \\( c_1 = 0 \\):\n",
+        "\n",
+        "Se aplica una compuerta \\( X \\) sobre `qw[1]`:\n",
+        "\n",
+        "$$\n",
+        "|\\phi_4\\rangle = X_{qw[1]} |\\phi_2'\\rangle\n",
+        "$$\n",
+        "\n",
+        "Este paso es necesario solo para el caso específico en que **no se produce inversión ni fase**, y se requiere corrección manual para obtener fidelidad máxima.\n",
+        "\n",
         "---\n",
         "\n",
         "## Estado final en Bob\n",
         "\n",
-        "Tras aplicar las correcciones, el estado final en `qw[1]` (Bob) es:\n",
+        "Tras aplicar las correcciones, el qubit `qw[1]` debe encontrarse en el estado:\n",
         "\n",
         "$$\n",
-        "\\rho_{\\text{Bob}} = \\text{Tr}_{\\text{resto}}(|\\Psi_{\\text{final}}\\rangle\\langle\\Psi_{\\text{final}}|)\n",
+        "|\\phi_{\\text{final}}\\rangle = \\alpha|0\\rangle + \\beta|1\\rangle\n",
         "$$\n",
         "\n",
-        "Idealmente:\n",
-        "\n",
-        "$$\n",
-        "\\rho_{\\text{Bob}} = |\\psi\\rangle\\langle\\psi|,\\quad \\text{es decir, el estado original de Alice}\n",
-        "$$\n",
+        "Esto significa que Bob ha recuperado exactamente el estado original de Alice.\n",
         "\n",
         "---\n",
         "\n",
         "## Observación importante\n",
         "\n",
-        "> El circuito actual **no contempla todas las combinaciones** posibles de bits clásicos en sus `if_test`, por lo tanto, **existen rutas en las cuales Bob recibe un estado incorrecto**, con fidelidad $ F < 1 $. Esta imperfección puede ser corregida ampliando la lógica condicional del circuito.\n",
+        " -  El circuito actual **no contempla todas las combinaciones** posibles de bits clásicos en sus `if_test`, por lo tanto, **existen rutas en las cuales Bob recibe un estado incorrecto**, con fidelidad $ F < 1 $. Esta imperfección puede ser corregida ampliando la lógica condicional del circuito.\n",
         "\n",
         "---\n",
         "\n",
