--- a/Informe_de_laboratorio_4.ipynb
+++ b/Informe_de_laboratorio_4.ipynb
@@ -616,7 +616,6 @@
         "| $|-\\rangle$        | `X` seguida de `H`       |\n",
         "\n",
         "\n",
-        "---\n",
         "\n",
         "### 2. El protocolo paso a paso\n",
         "\n",
@@ -2151,7 +2150,7 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "\n",
-        "# Rango de cúbits interceptados (x)\n",
+        "# Rango de qúbits interceptados (x)\n",
         "x = np.arange(0, 51, 1)\n",
         "\n",
         "# Probabilidad de no ser detectada\n",
@@ -2161,7 +2160,7 @@
         "plt.figure(figsize=(8, 5))\n",
         "plt.plot(x, P, marker='o', color='purple', label=r'$P(x) = 0.75^x$')\n",
         "plt.title('Probabilidad de que Eva NO sea detectada en función de x')\n",
-        "plt.xlabel('Número de cúbits interceptados (x)')\n",
+        "plt.xlabel('Número de qúbits interceptados (x)')\n",
         "plt.ylabel('Probabilidad de no ser detectada')\n",
         "plt.grid(True, linestyle='--', alpha=0.6)\n",
         "plt.legend()\n",
@@ -2176,7 +2175,7 @@
         "id": "3RbvgwMk4qRp",
         "outputId": "c2f99340-79db-4812-e2ed-01698a84528f"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
