--- a/Informe_de_laboratorio_4.ipynb
+++ b/Informe_de_laboratorio_4.ipynb
@@ -608,14 +608,17 @@
         "\n",
         "  Entonces, para preparar cada estado a partir de $|0\\rangle$:\n",
         "\n",
+        "  \\\\\n",
+        "\n",
         "| Estado deseado     | Compuertas aplicadas     |\n",
         "|:------------------:|:------------------------:|\n",
-        "| $|0\\rangle$        | Ninguna                  |\n",
-        "| $|1\\rangle$        | `X`                      |\n",
-        "| $|+\\rangle$        | `H`                      |\n",
-        "| $|-\\rangle$        | `X` seguida de `H`       |\n",
+        "| 0                  | Ninguna                  |\n",
+        "| 1                  | X                        |\n",
+        "| +                  | H                        |\n",
+        "| -                  | X seguida de H           |\n",
         "\n",
         "\n",
+        "\\\\\n",
         "\n",
         "### 2. El protocolo paso a paso\n",
         "\n",
