--- a/Informe_de_laboratorio_4.ipynb
+++ b/Informe_de_laboratorio_4.ipynb
@@ -2451,7 +2451,7 @@
       },
       "source": [
         "# Análisis de resultados\n",
-        "* La computación cuántica está revolucionando la seguridad de la información. Gracias a las propiedades cuánticas de partículas como los fotones, se puede generar verdadera aleatoriedad, lo que hace que los sistemas sean más seguros y difíciles de predecir. Uno de los protocolos más conocidos que aprovecha estas características es el BB84. Este permite que dos personas, comúnmente llamadas Alice y Bob, compartan una clave secreta sin necesidad de un canal físico el cual puede llegar a ser bastante inseguro. Al aplicar este protocolo, logramos codificar y decodificar el mensaje \"vamos a ganar cuántica\" con éxito. A pesar de que la clave utilizada fue completamente aleatoria, el mensaje se transmitió con alta seguridad y fue correctamente interpretado al final.\n",
+        "* La computación cuántica está revolucionando la seguridad de la información. Gracias a las propiedades cuánticas de partículas como los fotones, se puede generar verdadera aleatoriedad, lo que hace que los sistemas sean más seguros y difíciles de predecir. Uno de los protocolos más conocidos que aprovecha estas características es el BB84. Este permite que dos personas, comúnmente llamadas Alice y Bob, compartan una clave secreta sin necesidad de un canal físico el cual puede llegar a ser bastante inseguro. Al aplicar este protocolo, logramos codificar y decodificar el mensaje \"vamos a ganar cuántica :)\" con éxito. A pesar de que la clave utilizada fue completamente aleatoria, el mensaje se transmitió con alta seguridad y fue correctamente interpretado al final.\n",
         "\n",
         "\n"
       ]
@@ -2482,13 +2482,21 @@
         "* Protocolo BB84:\n",
         "El protocolo BB84 es un pilar fundamental de la criptografía cuántica y ofrece un método teóricamente inquebrantable para la distribución de claves. Su seguridad se basa en principios cuánticos fundamentales:\n",
         "\n",
-        " * El principio de incertidumbre de Heisenberg: Medir un estado cuántico sin la base correcta lo perturba.\n",
+        " - El principio de incertidumbre de Heisenberg: Medir un estado cuántico sin la base correcta lo perturba.\n",
         "\n",
-        "  * El teorema de no clonación: No se pueden copiar estados cuánticos, por lo tanto, Eve no puede duplicar los qubits.\n",
+        "  - El teorema de no clonación: No se pueden copiar estados cuánticos, por lo tanto, Eve no puede duplicar los qubits.\n",
         "\n",
-        "  * Comparación aleatoria de bases: Solo se usan los bits con bases coincidentes para la clave final.\n",
+        "  - Comparación aleatoria de bases: Solo se usan los bits con bases coincidentes para la clave final.\n",
         "\n",
-        "* La simulación en Qiskit muestra cómo se pueden modelar estos principios utilizando herramientas prácticas para generar una clave compartida incluso en presencia de un espía. Además, la simulación usando np.random.seed() puede extenderse para usar aleatoriedad cuántica real (por ejemplo, utilizando compuertas Hadamard y mediciones) para una implementación aún más realista."
+        "* La simulación en Qiskit muestra cómo se pueden modelar estos principios utilizando herramientas prácticas para generar una clave compartida incluso en presencia de un espía. Además, la simulación usando np.random.seed() puede extenderse para usar aleatoriedad cuántica real (por ejemplo, utilizando compuertas Hadamard y mediciones) para una implementación aún más realista.\n",
+        "\n",
+        "* Avances en criptografíá propuestos desde la cuántica ofrecen una ventaja interesante frente a los paradigmas clásicos. Como muestra de ello, tenemos que la complejidad ya no depende de las dificultades asociadas a la complejidad computacional que suponen, por ejemplo, métodos como la factorización de números primos muy grandes. Sino que la complejidad recae sobre la imposibilidad de clonar información y la naturaleza cuántica asociada a su indeterminación. Esto es importante ya que ofrece un sistema de seguridad muchisimo más escalable. Esto es, que mientras se disponga de una cantidad de qubits aceptable (dependerá de diversos criterios), la seguridad de protocolos como BB84 es extremadamente alta, ya que no se puede romper simplemente agregando más capacidad de cómputo bruto, sino que implica sortear una barrera interpuesta por la mecánica cuántica (o violar principios físicos, lo cuál no es muy realista).\n",
+        "\n",
+        "* En consonancia con lo anterior, se muestra que el la computación cuántica no solo ofrece una capacidad (por paralelismo cuántico) para romper protocolos de seguridad clásicos donde la barrera a sortear es la cantidad de cálculos a realizar. Sino que también ofrece una nueva filosofía de criptografía que ni la misma computación cuántica puede romper (nuevamente, esto implicaría violar ciertos principios físicos).\n",
+        "\n",
+        "* No obstante, debe tenerse muy en cuenta que el mecanismo de seguridad propuesto en BB84 recae más en un auto-sabotaje por parte Eve. Con lo que el mecanismo recae, irónicamente, en la participación de un espía, para entrar en funcionamiento. También hay que tener en cuenta que el sistema de seguridad se basa en advertir a los interlocutores, sobre la presencia de un espía, con lo que estos tendrán la responsabilidad de cortar la comunicación (incluso si la intromisión de Eve puede introducir errores en el mensaje al desconocer la base en la que se codifica cada qubit). De esto se infiere que si bien el sistema puede hasta cierto punto garantizar que la información no sea obtenida por Eve, esta última podría tener como objetivo secundario sabotear la comunicación entre Alice y Bob, entorpeciéndola y obligando a ambos a reiniciar el proceso.\n",
+        "\n",
+        "* De lo anterior, se sugiere entonces explorar nuevas alternativas en cuanto a criptografía cuántica que contemplen mecanismos para garantizar que la línea de comunicación no solo no se vea \"chuzada\", sino también que no se vea cortada o saboteada."
       ],
       "metadata": {
         "id": "ewWb7V_mrJkz"
@@ -2519,9 +2527,11 @@
         "https://doi.org/10.1016/j.tcs.2014.05.025.\n",
         "(https://www.sciencedirect.com/science/article/pii/S0304397514004241)\n",
         "\n",
-        "[2] https://medium.com/quantum-untangled/quantum-key-distribution-and-bb84-protocol-6f03cc6263c5\n",
+        "[2] “Quantum Key Distribution and BB84 Protocol,” Medium, Jun. 21, 2020. [Online]. Available: https://medium.com/quantum-untangled/quantum-key-distribution-and-bb84-protocol-6f03cc6263c5\n",
+        "(Accedido: 20-jun-2025).\n",
         "\n",
-        "[3] https://arxiv.org/html/2312.05609v1\n"
+        "[3] S. R. M. Sujaykumar and B. Chandra Mohan, “Comprehensive Analysis of BB84, A Quantum Key Distribution Protocol,” arXiv preprint arXiv:2312.05609v1, Dec. 9, 2023. [Online]. Available: https://arxiv.org/html/2312.05609v1\n",
+        "(Accedido: 20-jun-2025).\n"
       ]
     }
   ],
