--- a/Informe_de_laboratorio_4.ipynb
+++ b/Informe_de_laboratorio_4.ipynb
@@ -2482,11 +2482,11 @@
         "* Protocolo BB84:\n",
         "El protocolo BB84 es un pilar fundamental de la criptografía cuántica y ofrece un método teóricamente inquebrantable para la distribución de claves. Su seguridad se basa en principios cuánticos fundamentales:\n",
         "\n",
-        " - El principio de incertidumbre de Heisenberg: Medir un estado cuántico sin la base correcta lo perturba.\n",
+        "    1) El principio de incertidumbre de Heisenberg: Medir un estado cuántico sin la base correcta lo perturba.\n",
         "\n",
-        "  - El teorema de no clonación: No se pueden copiar estados cuánticos, por lo tanto, Eve no puede duplicar los qubits.\n",
+        "    2) El teorema de no clonación: No se pueden copiar estados cuánticos, por lo tanto, Eve no puede duplicar los qubits.\n",
         "\n",
-        "  - Comparación aleatoria de bases: Solo se usan los bits con bases coincidentes para la clave final.\n",
+        "    3) Comparación aleatoria de bases: Solo se usan los bits con bases coincidentes para la clave final.\n",
         "\n",
         "* La simulación en Qiskit muestra cómo se pueden modelar estos principios utilizando herramientas prácticas para generar una clave compartida incluso en presencia de un espía. Además, la simulación usando np.random.seed() puede extenderse para usar aleatoriedad cuántica real (por ejemplo, utilizando compuertas Hadamard y mediciones) para una implementación aún más realista.\n",
         "\n",
