--- a/Practica5.ipynb
+++ b/Practica5.ipynb
@@ -505,8 +505,8 @@
         "  $$\n",
         "  \\vec{x} = \\frac{1}{2}(1,1,1,1,0,1,0,0,0,0,0,1,0,0,0,0)\n",
         "  $$\n",
-        "\n",
-        "  Basis Encoding entonces permite codificar entradas binarias en el estado inicial del circuito variacional.\n",
+        "  \n",
+        "  Basis Encoding entonces permite codificar entradas binarias en el estado inicial del circuito variacional.   [10](https://talentq-es.github.io/QML/docs/Part_02_QML/Chapter_02_Feature_encoding_myst.html).\n",
         "\n",
         "&nbsp;\n",
         "---\n",
@@ -525,8 +525,7 @@
         "  &nbsp;\n",
         "\n",
         "  Cuando se habla de emular la función de paridad mediante el circuito variacional, hablamos de que el objetivo de entrenar el modelo es ese, ajustar los parámetros del circuito para aproximar la función de paridad correspondiente al set de datos. El resultado debe ser un circuito que se asemeje lo máximo posible a la función de paridad real de los datos. Si bien la función de paridad es algo limitada como método de detección de errores, puede ser computacionalmente compleja de implementar. Por lo tanto, es útil su emulación mediante la cuántica pues se reduce el cómputo necesario gracias al paralelismo. Se podría decir que su implementación en el tutorial tiene fines pedagógicos.\n",
-        "\n",
-        "&nbsp;\n",
+        "  &nbsp;\n",
         "\n",
         "---\n",
         "4. **Anillo de CNOTs para entrelazar qubits con sus vecinos**:\n",
@@ -553,7 +552,6 @@
         "  y = w_0 + w_1 x_1 + w_2 x_2 + \\dots + w_n x_n\n",
         "  $$\n",
         "\n",
-        "\n",
         "  En el contexto específico de los circuitos cuánticos variacionales, los pesos no son que parámetros del VQC (recuerde que estos circuitos son parametrizables), y se ajustan durante el entrenamiento del modelo (tal y como ocurre en Machine Learning Clásico). Este ajuste en los pesos se ve reflejado en ajustes a los ángulos de rotación de las compuertas $R_y$ $(θ, Φ, λ)$. Y, en consecuencia, alteran el comportamiento del circuito cuántico sobre las entradas.\n",
         "\n",
         "  En el caso especifico de los clasificadores variacionales cuánticos expuestos por Pennylane, los pesos se inicializan de manera aleatoria:\n",
@@ -563,8 +561,8 @@
         "  ```\n",
         "\n",
         "  Estos pesos, inicialmente aleatorios, se van actualizando con cada iteración de entrenamiento, mediante el Optimizer (algoritmo clásico de optimización, típicamente gradient descent o Nesterov Momentum) para minimizar una función de pérdida. Esto, usando un lote de datos limitado por iteraación. [5](https://www.geeksforgeeks.org/deep-learning/the-role-of-weights-and-bias-in-neural-networks/)\n",
-        "\n",
-        "\n",
+        "  \n",
+        "  \n",
         "---\n",
         "6. **BasisState function**:\n",
         "  Función provista por Pennylane que permite hacer precisamente lo que se estableció en el inciso 2 (basis encoding), pues recibe un bitstring clásico (binario) y lo códifica en estados de qubits, lo que permite preparar el estado cuántico base. En particular, esta función prepara un estado tal que pone en 1, aquellos qubits correspondientes a entradas en 1. Por ejemplo, suponga una entrada **x = 0101**, que es un bitstring clásico que podría ser argumento de la función basisState. Se espera que, en un sistema cuántico con 4 qubits o wires, el estado preparado sea **$   |ψ> = |0101>$**. El argumento *x* (entrada) debe ser del tipo ``list``.\n",
@@ -1388,7 +1386,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* Aunque el machine learning cuántico comparte una estructura similar con su contraparte clásica—basada en entrenamiento, validación e inferencia—su enfoque en la optimización de ángulos de rotación en compuertas cuánticas introduce un paradigma distinto. Este método aprovecha las propiedades cuánticas para aumentar la probabilidad de obtener resultados correctos, pero no elimina por completo el desafío inherente a la superposición y medición probabilística de los estados cuánticos, que puede introducir incertidumbre en las respuestas. Por lo tanto, mientras que la computación cuántica ofrece ventajas teóricas en eficiencia y representación de datos, su naturaleza probabilística aún requiere avances para garantizar precisión y confiabilidad en aplicaciones prácticas."
+        "* Aunque el machine learning cuántico comparte una estructura similar con su contraparte clásica—basada en entrenamiento, validación e inferencia—su enfoque en la optimización de ángulos de rotación en compuertas cuánticas introduce un paradigma distinto. Este método aprovecha las propiedades cuánticas para aumentar la probabilidad de obtener resultados correctos, pero no elimina por completo el desafío inherente a la superposición y medición probabilística de los estados cuánticos, que puede introducir incertidumbre en las respuestas. Por lo tanto, mientras que la computación cuántica ofrece ventajas teóricas en eficiencia y representación de datos, su naturaleza probabilística aún requiere avances para garantizar precisión y confiabilidad en aplicaciones prácticas.\n",
+        "\n",
+        "* Los paralelismos tanto matemáticos entre el machine learning clásico y el cuántico hacen evidente el hecho de que el QML no es tan diferente a lo que ya se conocía sobre aprendizaje de máquina convencional. Por lo menos, en términos de implementación, los pasos resultan conceptualmente identicos (optimización, cálculos de error, entrenamiento supervisado). No obstante, resalta el hecho de que la diferencia magna es el aprovechamiento del espacio de cómputo del que nos deja disponer la computación cuántica. Pues permite evaluar grandes volumenes de datos mediante estados cuánticos, lo que implica que esos volumenes de datos se procesan y evaluan con apoyo en el paralelismo cuántico."
       ],
       "metadata": {
         "id": "5WADORQSjvwT"
@@ -1423,6 +1423,9 @@
         "**[8]** H. S. Ranjane, “*Understanding Cost Functions in Machine Learning: A Complete Guide,*” **Medium**, 12-ene-2025. [En línea]. Disponible en: https://medium.com/@harshsranjane03/understanding-cost-functions-in-machine-learning-a-complete-guide-3f58b07f0ec5\n",
         "\n",
         "**[9]** J. Brownlee, “*Why Initialize a Neural Network with Random Weights?*”, **Machine Learning Mastery**, 15-ago-2022. [En línea]. Disponible en: https://machinelearningmastery.com/why-initialize-a-neural-network-with-random-weights/\n",
+        "\n",
+        "**[10]** TalentQ, “Feature encoding in quantum machine learning,” in *QML Part 02 – Feature encoding*, TalentQ‑es, [Online]. Available: https://talentq-es.github.io/QML/docs/Part_02_QML/Chapter_02_Feature_encoding_myst.html. [Accessed: 08‑Jul‑2025].\n",
+        "\n",
         "\n",
         "\n"
       ],
