--- a/Final/Punto2.ipynb
+++ b/Final/Punto2.ipynb
@@ -1,31 +1,14 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 3,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Lt2cP9SdIr10",
-        "outputId": "2994c259-5ed6-4a4d-fd33-461a55593d22"
+        "outputId": "117ebc8e-be71-4568-90b2-4b1dd36e6f4b"
       },
       "outputs": [
         {
@@ -65,45 +48,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "41fde86e"
+      },
+      "source": [
+        "## I. PREPROCESAMIENTO DE LOS DATOS DE ENTRADA"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# === IMPORTACIONES ===\n",
-        "import pennylane as qml\n",
-        "from pennylane import numpy as np\n",
-        "from pennylane.optimize import QNGOptimizer\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import accuracy_score\n",
-        "import pandas as pd\n",
-        "import zipfile\n",
-        "import matplotlib.pyplot as plt\n",
+        "import zipfile # Necesaria para la extracción del archivo .zip que contiene las carpetas con los conjuntos de datos\n",
+        "import pandas as pd # Útil para representación de métricas\n",
         "\n",
-        "# === CONFIGURACIÓN DEL DISPOSITIVO ===\n",
-        "num_qubits = 4\n",
-        "num_layers = 4\n",
-        "dev = qml.device(\"default.qubit\", wires=num_qubits)\n",
-        "\n",
-        "# === CIRCUITOS ===\n",
-        "def stateprep(x):\n",
-        "    qml.BasisEmbedding(x, wires=range(num_qubits))\n",
-        "\n",
-        "@qml.qnode(dev, interface=\"autograd\")\n",
-        "def qnode_cost(param_pack):\n",
-        "    weights, x = param_pack\n",
-        "    stateprep(x)\n",
-        "    qml.StronglyEntanglingLayers(weights, wires=range(num_qubits))\n",
-        "    return qml.expval(qml.PauliZ(0))\n",
-        "\n",
-        "@qml.qnode(dev, interface=\"autograd\")\n",
-        "def qnode_only_weights(weights):\n",
-        "    # Usa global_x_batch[0] solo como dummy para el cálculo del tensor métrico\n",
-        "    stateprep(global_x_batch[0])\n",
-        "    qml.StronglyEntanglingLayers(weights, wires=range(num_qubits))\n",
-        "    return qml.expval(qml.PauliZ(0))\n",
-        "\n",
-        "def classifier(weights, bias, x):\n",
-        "    return qnode_cost((weights, x)) + bias\n",
-        "\n",
-        "# === DATASET TITANIC ===\n",
         "with zipfile.ZipFile(\"titanic.zip\", 'r') as zip_ref:\n",
         "    zip_ref.extractall(\"titanic_data\")\n",
         "\n",
@@ -115,24 +73,217 @@
         "\n",
         "cols = ['is_child', 'Pclass_1', 'Pclass_2', 'Sex_female']\n",
         "X = df[cols].astype(int).values\n",
-        "Y = (df['Survived'] * 2 - 1).values\n",
+        "Y = (df['Survived'] * 2 - 1).values  # {0,1} → {-1,1}"
+      ],
+      "metadata": {
+        "id": "aNdNigufKt3r"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## II. DIVISIÓN DE LOS DATOS DE ENTRENAMIENTO Y DATOS DE PRUEBA"
+      ],
+      "metadata": {
+        "id": "-AkRt81JJ8IK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "from pennylane import numpy as np\n",
         "\n",
         "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
         "X_train = np.array(X_train, requires_grad=False, dtype=int)\n",
         "X_test = np.array(X_test, requires_grad=False, dtype=int)\n",
         "Y_train = np.array(Y_train, requires_grad=False)\n",
-        "Y_test = np.array(Y_test, requires_grad=False)\n",
+        "Y_test = np.array(Y_test, requires_grad=False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FKey8j9uKxa5",
+        "outputId": "183b909a-37d7-44c3-f65a-1aa4ce4eb69f"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/pennylane/capture/capture_operators.py:33: RuntimeWarning: PennyLane is not yet compatible with JAX versions > 0.4.28. You have version 0.5.2 installed. Please downgrade JAX to <=0.4.28 to avoid runtime errors.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## III. ETAPA DEL FEATURE MAP"
+      ],
+      "metadata": {
+        "id": "PcfIXL9mKBwR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def stateprep(x):\n",
+        "    qml.BasisEmbedding(x, wires=range(4))  # num_qubits = 4"
+      ],
+      "metadata": {
+        "id": "FS8Sqd4ZK19n"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## IV. ETAPA DEL ANSATZ"
+      ],
+      "metadata": {
+        "id": "1Pb1EsmTKKYT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pennylane as qml\n",
+        "num_qubits = 4\n",
+        "num_layers = 4\n",
+        "dev = qml.device(\"default.qubit\", wires=num_qubits)\n",
         "\n",
-        "# === PARÁMETROS DEL MODELO ===\n",
+        "@qml.qnode(dev, interface=\"autograd\")\n",
+        "def qnode_cost(param_pack):\n",
+        "    weights, x = param_pack\n",
+        "    stateprep(x)\n",
+        "    qml.StronglyEntanglingLayers(weights, wires=range(num_qubits))\n",
+        "    return qml.expval(qml.PauliZ(0))\n",
+        "\n",
+        "@qml.qnode(dev, interface=\"autograd\")\n",
+        "def qnode_only_weights(weights):\n",
+        "    stateprep(global_x_batch[0])\n",
+        "    qml.StronglyEntanglingLayers(weights, wires=range(num_qubits))\n",
+        "    return qml.expval(qml.PauliZ(0))\n",
+        "\n",
+        "def classifier(weights, bias, x):\n",
+        "    return qnode_cost((weights, x)) + bias"
+      ],
+      "metadata": {
+        "id": "ztpQOtdhK4zw"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## V. ETAPA DE FUNCIÓN DE PERDIDA"
+      ],
+      "metadata": {
+        "id": "qDtgE5T1KQfj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# La pérdida utilizada es: L = (y - pred)^2\n",
+        "# Se implementa de forma manual más adelante en la parte de entrenamiento"
+      ],
+      "metadata": {
+        "id": "VMEA8wT4LAGa"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## VI. ETAPA DE EVALUACIÓN DE LA FUNCIÓN DE COSTO"
+      ],
+      "metadata": {
+        "id": "SaUpaqbrKV73"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pennylane.optimize import QNGOptimizer\n",
+        "qng_opt = QNGOptimizer(stepsize=0.1)\n",
+        "bias_lr = 0.01"
+      ],
+      "metadata": {
+        "id": "hEAN7pv-LBDp"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## VII. ETAPA DE ANÁLISIS DE PRECISIÓN"
+      ],
+      "metadata": {
+        "id": "dzbLbatDKYMJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "def evaluate_accuracy(X, Y, weights, bias):\n",
+        "    preds = [np.sign(classifier(weights, bias, x)) for x in X]\n",
+        "    return accuracy_score(Y, preds)"
+      ],
+      "metadata": {
+        "id": "YVTLEjA2LL42"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## VIII. PESOS INICIALES DEFINIDOS"
+      ],
+      "metadata": {
+        "id": "LDgMgIBLKfHA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "shape = qml.StronglyEntanglingLayers.shape(num_layers, num_qubits)\n",
         "weights = 0.1 * np.random.randn(*shape)\n",
         "weights.requires_grad = True\n",
-        "bias = np.tensor(0.0, requires_grad=True)\n",
-        "\n",
-        "qng_opt = QNGOptimizer(stepsize=0.1)\n",
-        "bias_lr = 0.01\n",
-        "\n",
-        "# === ENTRENAMIENTO CON MINI-BATCH ===\n",
+        "bias = np.tensor(0.0, requires_grad=True)"
+      ],
+      "metadata": {
+        "id": "mv82Q84vLMrB"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## IX. PESOS FINALES ENTRENADOS"
+      ],
+      "metadata": {
+        "id": "HRDTLZMkKil3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"== INICIO DEL ENTRENAMIENTO ==\")\n",
         "batch_size = 16\n",
         "num_epochs = 100\n",
         "log_interval = 5\n",
@@ -140,88 +291,118 @@
         "acc_hist = []\n",
         "bias_hist = []\n",
         "\n",
-        "print(\"== INICIO DEL ENTRENAMIENTO ==\")\n",
-        "\n",
         "for it in range(num_epochs):\n",
         "    idx = np.random.choice(len(X_train), batch_size, replace=False)\n",
         "    global_x_batch = X_train[idx]\n",
         "    y_batch = Y_train[idx]\n",
         "\n",
-        "    # Paso 1: actualizar pesos (usamos solo la primera muestra para adjoint)\n",
+        "    # Paso 1: actualizar pesos\n",
         "    metric_tensor = qml.adjoint_metric_tensor(qnode_only_weights)\n",
         "    weights = qng_opt.step(qnode_only_weights, weights, metric_tensor_fn=metric_tensor)\n",
         "    weights.requires_grad = True\n",
         "\n",
-        "    # Paso 2: actualizar bias usando promedio del gradiente en el batch\n",
+        "    # Paso 2: actualizar bias\n",
         "    preds = np.array([classifier(weights, bias, xi) for xi in global_x_batch])\n",
         "    grads = -2 * (y_batch - preds)\n",
         "    avg_grad = np.mean(grads)\n",
         "    bias = bias - bias_lr * avg_grad\n",
         "\n",
-        "    # Registro\n",
         "    if it % log_interval == 0 or it == num_epochs - 1:\n",
-        "        preds_train = [np.sign(classifier(weights, bias, xi)) for xi in X_train]\n",
-        "        acc = accuracy_score(Y_train, preds_train)\n",
+        "        acc = evaluate_accuracy(X_train, Y_train, weights, bias)\n",
         "        acc_hist.append(acc)\n",
         "        bias_hist.append(bias.item())\n",
-        "        print(f\"Iter {it:3d} | Accuracy: {acc:.3f} | Bias: {bias:.3f}\")\n",
-        "\n",
-        "# === EVALUACIÓN FINAL ===\n",
-        "print(\"\\n== EVALUACIÓN FINAL ==\")\n",
-        "preds_test = [np.sign(classifier(weights, bias, x)) for x in X_test]\n",
-        "acc_test = accuracy_score(Y_test, preds_test)\n",
-        "print(f\"Test accuracy: {acc_test:.3f}\")\n",
-        "\n",
-        "# === VISUALIZACIÓN ===\n",
-        "plt.figure(figsize=(10, 4))\n",
-        "plt.subplot(1, 2, 1)\n",
-        "plt.plot(np.arange(0, num_epochs, log_interval), acc_hist, label=\"Train Accuracy\")\n",
-        "plt.xlabel(\"Epoch\")\n",
-        "plt.ylabel(\"Accuracy\")\n",
-        "plt.title(\"Training Accuracy\")\n",
-        "plt.grid(True)\n",
-        "\n",
-        "plt.subplot(1, 2, 2)\n",
-        "plt.plot(np.arange(0, num_epochs, log_interval), bias_hist, label=\"Bias\")\n",
-        "plt.xlabel(\"Epoch\")\n",
-        "plt.ylabel(\"Bias\")\n",
-        "plt.title(\"Bias Evolution\")\n",
-        "plt.grid(True)\n",
-        "\n",
-        "plt.tight_layout()\n",
-        "plt.show()\n"
+        "        print(f\"Iter {it:3d} | Accuracy: {acc:.3f} | Bias: {bias:.3f}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "zZ06xjQD8Yr-",
-        "outputId": "5ece36ee-9026-4ee8-8abe-493c62bb4db8"
+        "id": "SekYM_X6LPpM",
+        "outputId": "27470533-88c3-4d44-e5c4-3843ca9038a6"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "== INICIO DEL ENTRENAMIENTO ==\n",
-            "Iter   0 | Accuracy: 0.782 | Bias: -0.002\n",
-            "Iter   5 | Accuracy: 0.615 | Bias: 0.003\n",
-            "Iter  10 | Accuracy: 0.331 | Bias: 0.041\n",
-            "Iter  15 | Accuracy: 0.713 | Bias: 0.030\n",
-            "Iter  20 | Accuracy: 0.753 | Bias: 0.055\n",
-            "Iter  25 | Accuracy: 0.715 | Bias: 0.058\n",
-            "Iter  30 | Accuracy: 0.617 | Bias: 0.073\n",
-            "Iter  35 | Accuracy: 0.617 | Bias: 0.098\n",
-            "Iter  40 | Accuracy: 0.617 | Bias: 0.101\n",
-            "Iter  45 | Accuracy: 0.617 | Bias: 0.133\n",
-            "Iter  50 | Accuracy: 0.617 | Bias: 0.129\n",
-            "Iter  55 | Accuracy: 0.617 | Bias: 0.141\n",
-            "Iter  60 | Accuracy: 0.617 | Bias: 0.156\n",
-            "Iter  65 | Accuracy: 0.617 | Bias: 0.155\n"
+            "Iter   0 | Accuracy: 0.520 | Bias: 0.002\n",
+            "Iter   5 | Accuracy: 0.508 | Bias: -0.043\n",
+            "Iter  10 | Accuracy: 0.517 | Bias: -0.063\n",
+            "Iter  15 | Accuracy: 0.618 | Bias: -0.088\n",
+            "Iter  20 | Accuracy: 0.605 | Bias: -0.087\n",
+            "Iter  25 | Accuracy: 0.624 | Bias: -0.102\n",
+            "Iter  30 | Accuracy: 0.338 | Bias: -0.104\n",
+            "Iter  35 | Accuracy: 0.688 | Bias: -0.129\n",
+            "Iter  40 | Accuracy: 0.683 | Bias: -0.115\n",
+            "Iter  45 | Accuracy: 0.584 | Bias: -0.079\n",
+            "Iter  50 | Accuracy: 0.584 | Bias: -0.036\n",
+            "Iter  55 | Accuracy: 0.633 | Bias: -0.000\n",
+            "Iter  60 | Accuracy: 0.633 | Bias: 0.062\n",
+            "Iter  65 | Accuracy: 0.633 | Bias: 0.107\n",
+            "Iter  70 | Accuracy: 0.633 | Bias: 0.157\n",
+            "Iter  75 | Accuracy: 0.633 | Bias: 0.201\n",
+            "Iter  80 | Accuracy: 0.633 | Bias: 0.244\n",
+            "Iter  85 | Accuracy: 0.633 | Bias: 0.278\n",
+            "Iter  90 | Accuracy: 0.633 | Bias: 0.314\n",
+            "Iter  95 | Accuracy: 0.633 | Bias: 0.329\n",
+            "Iter  99 | Accuracy: 0.633 | Bias: 0.333\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## X. EVALUACIÓN DE DESEMPEÑO DEL CLASIFICADOR CUÁNTICO FINAL"
+      ],
+      "metadata": {
+        "id": "NbIO2-6aKm4C"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\n== EVALUACIÓN FINAL ==\")\n",
+        "acc_test = evaluate_accuracy(X_test, Y_test, weights, bias)\n",
+        "print(f\"Test accuracy: {acc_test:.3f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5n8DFTQRLUXm",
+        "outputId": "a2eb0a05-bc3e-4ef3-b0a6-1588713bc6b8"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "== EVALUACIÓN FINAL ==\n",
+            "Test accuracy: 0.603\n"
           ]
         }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "TPU",
+    "colab": {
+      "gpuType": "V28",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
